# routers/manage.go
@@ -18,6 +18,8 @@ func loadManage(r *gin.RouterGroup) {
 	manageRouter.GET("/company/perms/:id/editable")
 	manageRouter.POST("/company/perms/:id/visible")
 	manageRouter.POST("/company/perms/:id/editable")
+	manageRouter.POST("/company/quarters/:id/new", append(middleware.ModeratorMiddleware, company.AllowQuarterByID)...)
+	manageRouter.DELETE("/company/quarters/:id/remove", append(middleware.ModeratorMiddleware, company.RemoveQuarterByID)...)
 
 	manageRouter.GET("/vc/list", append(middleware.AdminMiddleware, handlers.GetVCList)...)
 	manageRouter.PUT("/vc/:id/approve", append(middleware.AdminMiddleware, handlers.ApproveVC)...)
